spark/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-jupyter-ingress
  namespace: spark
spec:
  ingressClassName: nginx
  rules:
    - host: jupyter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-connect-server
                port:
                  number: 8888
